Fix: wrap에 min 값 적용

--- a/assets/scss/base/_preset.scss
+++ b/assets/scss/base/_preset.scss
@@ -73,6 +73,10 @@ iframe {
   }
 }
 
+#wrap {
+  min-width: 320px;
+}
+
 .blind {
   position: absolute;
   width: 1px;
